--- a/src/app/projects/minitronaltimeter/minitron_altimeter_page.html
+++ b/src/app/projects/minitronaltimeter/minitron_altimeter_page.html
@@ -33,7 +33,7 @@
 
     <p>
       Eventually I got the LED driver ICs working correctly and got first successful tests done with the real displays!
-      Here is almost all of them one simultaneously to test the wattage load.
+      Here is almost all of them turned on simultaneously to test the wattage load.
     </p>
     <img loading="lazy" imgurId="ChU1OGd"/>
 
