--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -111,7 +111,7 @@
     <p>
       The inner diameter of the wheel sprockets weren't wide enough to fit over the trucks so the inner part had to
       be increased in size, so a friend and I used a lathe to make enough clearance on the inner diameter of the
-      sprockets to accomodate the skate trucks.
+      sprockets to accommodate the skate trucks.
     </p>
     <img loading="lazy" imgurId="52EAVeL"/>
 
@@ -129,7 +129,7 @@
     <p>
       There's a popular open source 'dashboard' floating around the Internet called DaveGa, and it uses a 177 x 220px
       screen. I put in effort to rewriting it's display drivers to work with larger format touch screens and a more
-      powerful microcontroller to drive the screens at a sufficent refresh rate.
+      powerful microcontroller to drive the screens at a sufficient refresh rate.
       <a href="https://github.com/blakewilliams1/DaveGa-ili9341" target="_blank">You can find my modified version of the DaveGA library here.</a>
     </p>
     <img loading="lazy" imgurId="NOHQO1l" [isLandscape]="true"/>
