--- a/src/app/travels/half_dome_2022/half_dome_hike_page.html
+++ b/src/app/travels/half_dome_2022/half_dome_hike_page.html
@@ -88,10 +88,10 @@
   <img loading="lazy" imgurId="sJuaGUR" />
   <p>
     Many hours of hiking back later I got to finally see Vernal Falls in the daylight. Very impressive! I totally
-    understand why it was spraying so much mist at me in the dark. Look at the 3 people in the middle-ground on the
-    right side of the photo for some perspective on scale.
+    understand why it was spraying so much mist at me in the dark. 
   </p>
   <img loading="lazy" imgurId="vewAz1F" />
+  <p>Look at the 3 people in the middle-ground on the right side of the photo for some perspective on scale!</p>
   <img loading="lazy" imgurId="iMam3dA" [isLandscape]="true" />
   <p>
     I made it back to the trailhead around 4 for 5pm, sat at the river with a few others I met along the trail for
