--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -8,15 +8,15 @@
   <h2>Forward</h2>
   <div class="divider"></div>
   <p>
-    About a year and a half before this trip happened, I'd seen
-    <a href="https://www.youtube-nocookie.com/watch?v=JRuIUhK1vcc" target="_blank">a video</a> of people hopping the world's longest train -a
+    About a year and a half before this trip happened, I saw
+    <a href="https://www.youtube.com/watch?v=JRuIUhK1vcc" target="_blank">a video</a> of people hopping the world's longest train -a
     freight train cutting through the Sahara desert- and was interested in it ever since then as a "someday adventure".
     After looking further into the country I decided to make a trip out of it that led to the story you see here! As
     you read this, keep in mind that this was done with the following circumstances:
   </p>
   <ol>
     <li>I was traveling alone (hard to convince others to join) in a country
-      <a href="https://wikipedia.org/wiki/Slavery_in_Mauritania" target="_blank">where slavery is still common.</a></li>
+      <a href="https://wikipedia.org/wiki/Slavery_in_Mauritania" target="_blank">where slavery still exists.</a></li>
     <li>I did not have a working cell phone (issues buying SIM card in airport and no options after that)</li>
     <li>I did not have working credit or debit cards (<b>seriously fuck you Chase bank</b>, your "automated security
       system", and your phone agents blowing me off when I try to warn about my upcoming travels)</li>
@@ -75,8 +75,8 @@
     evening and Namoud invited me down the road to his family's home to have dinner with them.
     <img loading="lazy" imgurId="bRG1qn3" />
     Squash soup, porridge, very sweet crepes, mixed dates, and goat's milk; the goat's milk was incredible. I wanted
-    badly to get photos of dinner but in the moment it never felt right. It was a fairly intimate and generous offer to
-    allow me in and it just felt weird taking photos at that moment (the photo above was second dinner). We later
+    badly to get photos of first dinner but in the moment it never felt right. It was a fairly intimate and generous
+    offer to allow me in and it just felt weird taking photos at that moment (the photo above was second dinner). We later
     returned to the camping site, and slept on matts on the ground for a couple hours. Around 10:00 p.m. everyone woke
     up again and had a second dinner. It's apparently Ramadan so everyone fasts during the day and at night, speakers
     high in the local mosque's towers play prayers through the town. After one more round of coffee, we all went to bed.
@@ -506,9 +506,9 @@
     you going to Morocco?" And mean literally everything above their border. Travelers headed south from Dakhla all say
     they hear West Saharan locals say things like "welcome to Morocco" even though the official UN recognized border
     is hundreds of miles north. Moroccan flags fly throughout basically all towns now and the government of Morocco is
-    doing a lot to win favor in the region. Western Saharans don't pay any Moroccan taxes but Morocco has heavily
-    improved the region's infrastructure, public services, and general quality of life. If you look at the border of
-    Mauritania and Western Sahara on Google Maps you'll see it's solid, but the line in the north that divides it from
+    doing a lot to win favor in the region. The people of Western Sahara don't pay any Moroccan taxes but Morocco has
+    heavily improved the region's infrastructure, public services, and general quality of life. If you look at the border
+    of Mauritania and Western Sahara on Google Maps you'll see it's solid, but the line in the north that divides it from
     Morocco, it's much more faint and only dashed. Looking it up after returning, it seems like the UN takes a stance
     that western sahara should have right to sovereignty, but right now I highly doubt that will happen (not to say
     this is good or bad).
