--- a/src/app/travels/shasta/shasta_page.html
+++ b/src/app/travels/shasta/shasta_page.html
@@ -78,14 +78,15 @@
   After that it was a push up Misery Hill, still shrouded in wispy light fog.
   <img loading="lazy" imgurId="M2WIyRp" /><br>
   Cresting over Misery Hill gave the first sign of the summit!
-  <img loading="lazy" imgurId="AVgwuQS"/><br>
   <img loading="lazy" imgurId="CjXFlts" /><br>
-  It was just a light push over a flat saddle and a small switchback to the peak.
+  It was just a light push over a flat saddle and a small switchback to the peak. Here's a view looking down to the
+  south at Mt Shastina while walking along that saddle to the true summit:
   <img loading="lazy" imgurId="vBBUSvW"/><br>
   Actually reaching the peak was amazing. The accomplishment really set in and I made sure to sign the logbook.
   <img loading="lazy" imgurId="z6m5jsM" /><br>
-  The clouds hung around but
-  would give way and show glimpses up to 100 mi away. Coming back down was a breeze. 
+  The clouds hung around but would give way and show glimpses up to 100 mi away. Coming back down was a breeze despite
+  the clouds starting to move in. 
+  <img loading="lazy" imgurId="AVgwuQS"/><br>
   I stopped at my snowboard at the
   top of Red Banks to eat some food before writing down, but then I heard lightning off in the distance. There was a
   storm moving in from about 50 miles away and time to get off the mountain. The storm wasn't supposed to come in until
@@ -95,7 +96,7 @@
   <img loading="lazy" imgurId="KIqnrxF" /><br>
   The conditions were great, the snow had softened, and I got down within 15 minutes back to Lake Helen. Lots of people
   sliding glissading down were filming, would be nice to get those videos somehow. 
-  <img loading="lazy" imgurId="mOg8RNN" style="max-width: 60%; margin-left: auto; margin-right: auto; display: block;"/><br>
+  <img loading="lazy" imgurId="mOg8RNN" style="margin-left: auto; margin-right: auto; display: block;"/><br>
   Back at camp I packed everything up, and headed down to car. Riding the rest of the way down wasn't quite as enjoyable,
   all the snow downhill from there was moderately
   <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch" target="_blank">sun-cupped</a> and you're riding over these craters
@@ -104,7 +105,7 @@
   hitting the tree line. When I got back to the gear outfitters, they said someone radioed that my axe fell out of my
   pack on the way back. They said they wouldn't fine me for late/lost gear so I didn't bring up the tent size issue.<br><br>
 
-  Overall it was a phenominal and exhausting time, 10/10.
+  Overall it was a phenomenal and exhausting time, 10/10.
   </p>
   </mat-card-content>
 </mat-card>
