--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -60,12 +60,7 @@
       fine on the Arduino. This took an EMBARRASSINGLY long time to realize and I finally had to break out the
       oscilloscope and decode the data being sent from each device to find the delta (next image is how it was supposed
       to look). I was actually sending 3 extra empty bytes in front of each intended byte... there was a single line in
-      my code where I accidentally converted an Arduino 'byte' type to 'int' which is 4x the size I was having issues
-      for the longest time getting the code to work on the Raspberry Pi even though it was working fine on the Arduino.
-      This took an EMBARRASSINGLY long time to realize and I finally had to break out the oscilloscope and decode the
-      data being sent from each device to find the delta (next image is how it was supposed to look). I was actually
-      sending 3 extra empty bytes in front of each intended byte... there was a single line in my code where I
-      accidentally converted an Arduino 'byte' type to 'int' which is 4x the size. 🤦‍♂️
+      my code where I accidentally converted an Arduino 'byte' type to 'int' which is 4x the size. 🤦‍♂️
     </p>
     <img loading="lazy" imgurId="ITn7YlV"/>
 
