--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -61,7 +61,7 @@
       <li>
         <h2>What if GitHub stops allowing users to host their personal websites with GH Pages?</h2>
         <p>
-          Then I\'ll just host my site on another platform or pay for server space. There
+          Then I'll just host my site on another platform or pay for server space. There
           will ALWAYS be website hosting services as long as the internet continues to exist.
         </p>
       </li>
