Adding trip story of SE Asia

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -153,4 +153,23 @@
     </mat-card-content>
   </mat-card>
 </a>
+
+  <mat-card routerLink="/indonesia-2019">
+    <mat-card-header>
+      <mat-card-title>Indonesia 2019</mat-card-title>
+      <mat-card-subtitle>Ambassadors of Bintang</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        When a friend of mine quit his job to do extended travel through SE Asia, took the opportunity to meet him in
+        Singapore and then explore Indonesia together. After Singapore we took flights to Sumatra, then Java, then
+        Bali. This is the story!
+      </p>
+      <img
+          loading="lazy"
+          imgurId="pCEpLLc"
+          [preventDialogOpening]="true"
+          alt="a large burning wooden statue known as 'The Man' at Burning Man festival"/>
+    </mat-card-content>
+  </mat-card>
 </div>
