--- a/src/app/travels/indonesia_2019/indonesia_2019_page.html
+++ b/src/app/travels/indonesia_2019/indonesia_2019_page.html
@@ -84,12 +84,15 @@
     <h2 id="sumatra">Sumatra</h2>
     <p>
       After leaving Singapore we decided to go to Sumatra, the largest island of Indonesia. We landed in the capital of
-      Medan, and the next morning we took a shuttle the 5 or so hours to Lake Toba in the middle of the island. This
-      lake used to be a super-volcano, and the lake is now the filled in caldera. In the middle of this lake is yet
-      another island called <a href="https://maps.app.goo.gl/b6T6M3vEoWzFtW4K6" target="_blank">Samosir</a>, our first
-      destination here. 
+      Medan, and the next morning we took a shuttle the 5 or so hours to Lake Toba in the middle of the island.
     </p>
-    <img loading="lazy" imgurId="bgmwzYL" />
+    <youtube-placeholder videoId="8mf6WkF5aBI"></youtube-placeholder>
+    <p>
+      At the port town on the edge of the massive lake, we took a ferry to island in the middle. This lake used to be a
+      super-volcano, and the lake is now the filled in caldera. In the middle of this lake is yet another island called
+      <a href="https://maps.app.goo.gl/b6T6M3vEoWzFtW4K6" target="_blank">Samosir</a>, our first destination here. 
+    </p>
+    <img loading="lazy" imgurId="f5QAFSg" />
     <img loading="lazy" imgurId="R43lFKq" />
     <P>
       Across from the guest house we were staying at was a general store with this sign advertising all the things they
