--- a/src/app/projects/smartpaywatch/smart_pay_watch_page.html
+++ b/src/app/projects/smartpaywatch/smart_pay_watch_page.html
@@ -64,8 +64,10 @@
     <img loading="lazy" imgurId="9D6Szwq"/>
 
     <p>
-      I'd love to resume this project, it was so close to being complete! If you have any advice on next debugging
-      steps, <a href="./contact">let me know.</a>
+      I'd love to resume this project, it was so close to being complete! My plan is to try adding thin ferrite
+      sheeting behind the flex PCB and chip, but if that doesn't work I'll try and find access to another arbitrary
+      wave function generator to see how it's being detuned when placed inside the watch. If you have any advice on
+      next debugging steps, <a href="./contact">let me know.</a>
     </p>
 
   </mat-card-content>
