Finishing the flip dot project

--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -81,10 +81,46 @@
     </video>
 
     <p>
-      Currently this project is on hiatus but will be resumed (really!). I'm very close to finishing the depth camera
-      integration, currently there is a but in which the output bitmaps are written offset, like header packets from
-      the depth camera are being interpreted as sensor data. I'm working through the issue and it will get fixed.
+      I ended up getting a fourth panel! After playing with it more I felt it definitely didn't have enough pixels to
+      use it the way I wanted
     </p>
 
+
+    <img loading="lazy" imgurId="ITn7YlV"/>
+    <p>
+      After fixing a slew of other issues regarding data corruption when passing depth cam frames between processes on
+      the raspberry pi, I finally got that portion of it working!  
+    </p>
+
+    <youtube-placeholder videoId="aqdh5Y02nFw"/>
+
+    <p>
+      This was the main attraction of the flip dot wall to me; it's the tribute to the massive wall that these panels
+      came from, and the bare minimum I'd do to feel like the project was a success, and now it is!
+    </p>
+    <p>
+      After this I added on a few minigames to the project, mostly just because I could and it made the display feel
+      more functional and fun. I started with making a quick clone of Flappy Bird, which I called "Flippy Bird" (good
+      name idea, Chris!)
+    </p>
+    <youtube-placeholder videoId="XeerZWMCzzU"/>
+
+    <p>
+      Then I added a lava lamp simulation with the rendering concept of
+      <a href="https://en.wikipedia.org/wiki/Metaballs" target="_blank">metaballs</a> (not meatballs).
+    </p>
+    <youtube-placeholder videoId="2jxo8JOFlUs"/>
+
+    <p>
+      Then finally I added pong because why not!
+    </p>
+    <youtube-placeholder videoId="2jxo8JOFlUs"/>
+
+    <p>
+      I'm super happy I put in the time to finish this project, and maybe in the future I'll add some more cool
+      features like chatGPT or Google Gemini integration if the depth camera I have has a microphone in it I can use.
+      If you'd like to see the code I used to create this project, you can find it
+      <a href="https://github.com/blakewilliams1/Flip-Dot-Project" target="_blank">in this repo, on my Github</a>
+    </p>
   </mat-card-content>
 </mat-card>
