--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -114,7 +114,7 @@
     <p>
       Then finally I added pong because why not!
     </p>
-    <youtube-placeholder videoId="2jxo8JOFlUs"/>
+    <youtube-placeholder videoId="aWOT9Bl-654"/>
 
     <p>
       I'm super happy I put in the time to finish this project, and maybe in the future I'll add some more cool
