--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -82,14 +82,8 @@
 
     <p>
       I ended up getting a fourth panel! After playing with it more I felt it definitely didn't have enough pixels to
-      use it the way I wanted
-    </p>
-
-
-    <img loading="lazy" imgurId="ITn7YlV"/>
-    <p>
-      After fixing a slew of other issues regarding data corruption when passing depth cam frames between processes on
-      the raspberry pi, I finally got that portion of it working!  
+      use it the way I wanted. After fixing a slew of other issues regarding data corruption when passing depth cam
+      frames between processes on the raspberry pi, I finally got that portion of it working!  
     </p>
 
     <youtube-placeholder videoId="aqdh5Y02nFw"/>
