Improving how image height is calculated
This will allow the removal of some magic numbers like the min-height: 130px, and defer lazy loading of images a bit better by having them correctly located way lower out of the viewport from the start

--- a/src/app/travels/half_dome_2022/half_dome_hike_page.html
+++ b/src/app/travels/half_dome_2022/half_dome_hike_page.html
@@ -22,7 +22,7 @@
     of Yosemite valley:
   </p>
   <img loading="lazy" imgurId="503mVTm" />
-  <img loading="lazy" imgurId="w7w0kqQ" [isLandscape]="true" />
+  <img loading="lazy" imgurId="w7w0kqQ" aspectRatio="9 / 16" />
   <p>
     The cables are the final stretch to the summit, and after you reach ~70% of the way to them you start going up stair
     climbers of carved rocks. These switchback up the smaller Sub Dome.
@@ -40,7 +40,7 @@
     upwards and it's still increasing in steepness while you climb up it. If you venture out of the cables and slip,
     the smooth granite will not catch you and you will slide down progressively steeper rock to the cliffs.
   </p>
-  <img loading="lazy" imgurId="ed7WvTC" [isLandscape]="true" />
+  <img loading="lazy" imgurId="ed7WvTC" aspectRatio="9 / 16" />
   <p>
     Did I mention how steep it was? I tried taking a photo while climbing but couldn't even capture the base and
     horizon in the same photo.
@@ -50,12 +50,12 @@
     It's a lot of vertical elevation to gain in such a short time, and your forearms can get tired from gripping the
     thin cable for so long.
   </p>
-  <img loading="lazy" imgurId="uCb4qSO" [isLandscape]="true" />
+  <img loading="lazy" imgurId="uCb4qSO" aspectRatio="9 / 16" />
   <p>
     Finally at the top around 10am, I took some photos and soaked in the accomplishment. This is a shot looking
     westward down the valley.
   </p>
-  <img loading="lazy" imgurId="TC1vgZ8"  [isLandscape]="true"/>
+  <img loading="lazy" imgurId="TC1vgZ8"  aspectRatio="9 / 16"/>
   <p>
     At the summit, there are no guardrails over the edge; just a sheer drop of more than 800 feet. The plateau starts
     sloping downwards along most of the ledge, so getting close to it is a freaky experience. This is about as close as
@@ -63,7 +63,7 @@
     legs dangling off.
     <br><b>No thanks!</b>
   </p>
-  <img loading="lazy" imgurId="EKf6bVt" [isLandscape]="true" />
+  <img loading="lazy" imgurId="EKf6bVt" aspectRatio="9 / 16" />
   <p>
     I did get close to the ledge on the rock outcropping; in the next photo I was out beyond the sheer cliff face. 
   </p>
@@ -72,19 +72,19 @@
     The views east and westward were truly spectacular; just miles and miles of glacially carved granite mountains.
     The visibility was incredibly good this day.
   </p>
-  <img loading="lazy" imgurId="Ar4bME7" [isLandscape]="true" />
+  <img loading="lazy" imgurId="Ar4bME7" aspectRatio="9 / 16" />
   <p>
     The descent was actually a lot easier and significantly less intimidating than the ascent. I got cocky and decided
     to get a photo without holding onto the cables which freaked out the people on the way up.
   </p>
-  <img loading="lazy" imgurId="JM0LSZR" [isLandscape]="true" />
-  <img loading="lazy" imgurId="1qlJJak" [isLandscape]="true" />
+  <img loading="lazy" imgurId="JM0LSZR" aspectRatio="9 / 16" />
+  <img loading="lazy" imgurId="1qlJJak" aspectRatio="9 / 16" />
   <p>
     Finally being able to see Nevada fall during the daytime, it was really impressive how fast the water would run
     down the falls. It didn't mist up into sparse and slow falling droplets, the water stayed as large sheets rushing
     down the granite at incredible speed.
   </p>
-  <img loading="lazy" imgurId="9IiBpF7" [isLandscape]="true" />
+  <img loading="lazy" imgurId="9IiBpF7" aspectRatio="9 / 16" />
   <img loading="lazy" imgurId="sJuaGUR" />
   <p>
     Many hours of hiking back later I got to finally see Vernal Falls in the daylight. Very impressive! I totally
@@ -92,7 +92,7 @@
   </p>
   <img loading="lazy" imgurId="vewAz1F" />
   <p>Look at the 3 people in the middle-ground on the right side of the photo for some perspective on scale!</p>
-  <img loading="lazy" imgurId="iMam3dA" [isLandscape]="true" />
+  <img loading="lazy" imgurId="iMam3dA" aspectRatio="9 / 16" />
   <p>
     I made it back to the trailhead around 4 for 5pm, sat at the river with a few others I met along the trail for
     half an hour, then drove out. I stopped for dinner somewhere, then finally made it back home around 10pm very
