--- a/src/app/travels/indonesia_2019/indonesia_2019_page.html
+++ b/src/app/travels/indonesia_2019/indonesia_2019_page.html
@@ -100,7 +100,7 @@
       rentals. The fact that it was publicly advertised was interesting considering that it was illegal in the rest of
       Sumatra.
     </P>
-    <img loading="lazy" imgurId="spy5LtE" [isLandscape]="true" />
+    <img loading="lazy" imgurId="spy5LtE" aspectRatio="9 / 16" />
     <p>
       We rented scooters and rode them south to the closest town on the island where we found a historic site of King
       Sipabutar's tomb. Legend has it that he led the first wave of settlers onto this island, but this wasn't something
