--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -39,7 +39,8 @@
       connections rated up to 160A for extra safety. There is at least 2 layers of kapton tape between each of the
       parallel groups as well as the entire exterior of the battery coated in it as well.
     </p>
-    <img loading="lazy" imgurId="kSjnMVu" [isLandscape]="true"/>
+
+    <img loading="lazy" imgurId="kSjnMVu" aspectRatio="9 / 16"/>
 
     <p>
       Here is the full assembly put into the pelican case, with charge ports installed and connected to the balance
@@ -132,7 +133,7 @@
       powerful microcontroller to drive the screens at a sufficient refresh rate.
       <a href="https://github.com/blakewilliams1/DaveGa-ili9341" target="_blank">You can find my modified version of the DaveGA library here.</a>
     </p>
-    <img loading="lazy" imgurId="NOHQO1l" [isLandscape]="true"/>
+    <img loading="lazy" imgurId="NOHQO1l" aspectRatio="9 / 16"/>
 
     <p>
       Here's the the finished result fully installed! It's a 3D printed enclosure to hold the display and
