--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
@@ -1,4 +1,4 @@
-<div id="placeholder" #placeholder>
+<div>
   <img [src]="'https://i.ytimg.com/vi/' + videoId + '/' + getThumbnailSize() + '.jpg'"
       (click)="onYoutubeClick()"
       alt="YouTube Video"
