Adding europe trip 2023 page

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -18,23 +18,24 @@
   </mat-card-content>
 </mat-card>
 
-<!-- 
-  <a href="/europe_trip_2023">
+  <mat-card routerLink="/euro-trip-2023">
+    <mat-card-header>
+      <mat-card-title>Europe Trip, Fall 2023</mat-card-title>
+      <mat-card-subtitle>Ein voller liter!</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        After many years of deliberating what tattoos to get first I finally decided on visiting an artist
+        in Poland, so why not make a trip out of it if I'm already going that far? My trip was Netherlands
+        -> Germany -> Poland -> Czech Republic
+      </p>
+      <img
+          loading="lazy"
+          imgurId="muQCYR6"
+          [preventDialogOpening]="true"
+          alt="Brandenburg gate in the late afternoon as seen from within the square"/>
+    </mat-card-content>
   </mat-card>
-  <mat-card-header>
-    <mat-card-title>Europe Trip, Fall 2023</mat-card-title>
-    <mat-card-subtitle>Ein voller liter!</mat-card-subtitle>
-    <a href="/europe_trip_2023"><mat-icon>launch</mat-icon></a>
-  </mat-card-header>
-  <mat-card-content>
-    <p>
-      After many years of deliberating what tattoos to get first I finally decided on visiting an artist
-      in Poland, so why not make a trip out of it if I'm already going that far? My trip was Netherlands
-      -> Germany -> Poland -> Czech Republic
-    </p>
-  </mat-card-content>
-</mat-card>
-</a> -->
 
 <mat-card routerLink="/burning-man-2023">
   <mat-card-header>
