Adding scroll spy to other pages

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -1,3 +1,4 @@
+<scroll-spy/>
 <mat-card>
   <mat-card-header>
     <h1>Burning Man, 2023</h1>
@@ -14,7 +15,7 @@
   </p>
 
   <div class="divider"></div>
-  <h2>Thursday</h2>
+  <h2 id="thursday">Thursday</h2>
   <p>
     I came late to the party because of work (mistake to have done that) and since I was going to be meeting a lot of
     new camp mates I wanted to make an impression so I bought sushi in Reno and kept it on ice for the last hour drive
@@ -105,7 +106,7 @@
   <img loading="lazy" imgurId="iRm7Vnd" />
 
   <div class="divider"></div>
-  <h2>Friday</h2>
+  <h2 id="friday">Friday</h2>
 
   <p>
     This was the day that the rain was expected to arrive. We'd have some time early in the day after waking up around
@@ -133,7 +134,7 @@
   </p>
 
   <div class="divider"></div>
-  <h2>Saturday</h2>
+  <h2 id="saturday">Saturday</h2>
   <p>
     With the rain gone and things starting to dry up again, A friend and I decided to check out Esplanade and see how
     everything fared. The roads were lumpy and uneven, making it difficult to ride bikes over.
@@ -194,7 +195,7 @@
   <img loading="lazy" imgurId="pGaYQd8" />
 
   <div class="divider"></div>
-  <h2>Sunday</h2>
+  <h2 id="sunday">Sunday</h2>
 
   <p>
     Today was the day of the Man burning! People were uncertain if it would happen because of the rain, but ultimately
@@ -262,7 +263,7 @@
   <img loading="lazy" imgurId="ECzRKVv" />
   
   <div class="divider"></div>
-  <h2>Monday</h2>
+  <h2 id="exodus">Monday</h2>
   <img loading="lazy" imgurId="g6XRRUO" />
 
   <p>
