--- a/src/app/travels/mauritania_trip/mauritania_trip_page.scss
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.scss
@@ -12,9 +12,12 @@ mat-card {
 
 img {
   border-radius: 3px;
-  margin: 1em 0;
+  margin-bottom: 16px;
   width: 100%;
-  min-height: 100px;
+}
+
+p {
+  margin-top: 0;
 }
 
 .divider {
@@ -22,9 +25,6 @@ img {
   margin: 0 -16px 1em -16px;
 }
 
-.youtube-player {
-  aspect-ratio: 16 / 9;
-  display: block;
-  margin: 1em 0;
-  width: 100%;
+youtube-placeholder {
+  margin-bottom: 16px;
 }
