Forgot to update some aspect ratios

--- a/src/app/projects/dotmatrixwatch/dot_matrix_watch.html
+++ b/src/app/projects/dotmatrixwatch/dot_matrix_watch.html
@@ -75,7 +75,7 @@
        Here's my pinky for scale; I did all the soldering by hand with an incredibly sharp-tipped iron. No reflow oven
        or hot air gun.
     </p>
-    <img loading="lazy" imgurId="45ehRzv"/>
+    <img loading="lazy" imgurId="45ehRzv" aspectRatio="873 / 1024"/>
 
     <p>
        This is a photo of the back; the yellow disk is a small auxiliary battery that's used only by the real time
@@ -83,7 +83,7 @@
        ~10 years even if the main battery for the watch dies. It's nice because even if the watch main battery dies,
        this keeps on going and the time is not lost.
     </p>
-    <img loading="lazy" imgurId="hMkN08n"/>
+    <img loading="lazy" imgurId="hMkN08n" aspectRatio="1024 / 727"/>
 
     <p>
        Shot of the front before permanently installing the displays.
