--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -52,7 +52,7 @@
       There is a lot small magnetic fields around the display to flip the discs, so they use RS485 twisted cabling to
       handle the large amount of electrical noise generated.
     </p>
-    <img loading="lazy" imgurId="1mmVQLA"/>
+    <img loading="lazy" imgurId="1mmVQLA" aspectRatio="1024 / 938"/>
 
 
     <p>
