--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -94,14 +94,14 @@
       strong enough for the job. Layer separation would occur if the gears took any non-trivial impact. Printing
       again with nylon filament might work and I considered reprinting in ABS, Nylon or PETG.
     </p>
-    <img loading="lazy" imgurId="v5FolcF"/>
+    <img loading="lazy" imgurId="v5FolcF" aspectRatio="576 / 1024"/>
 
     <p>
       The third and final sign that the rubber belts weren't going to cut it anymore for the project. Too much torque,
       too much belt skips, too brittle parts for what I need. The torque after only about 20 miles begin to cause the
       internal fibers of the belts to tear. This is when I begin to replace the belts with chain.
     </p>
-    <img loading="lazy" imgurId="nwvLNSc"/>
+    <img loading="lazy" imgurId="nwvLNSc" aspectRatio="853 / 1024"/>
 
     <p>
       I bought some 66 tooth sprockets and 25H roller chain. This is me drill pressing adapter holes along the spokes
