--- a/src/app/projects/nixiewatch/nixie_watch_page.html
+++ b/src/app/projects/nixiewatch/nixie_watch_page.html
@@ -18,7 +18,7 @@
       There were many challenges and new things I learned along the way; this was my first time ever using any CAD
       software for routing PCBs.
     </p>
-    <img loading="lazy" imgurId="Pj0JfXg"/>
+    <img loading="lazy" imgurId="Pj0JfXg" aspectRatio="971 / 1024"/>
 
     <p>
       This design was heavily based on the high voltage power supply circuit created by David Forbes, with many
@@ -45,7 +45,7 @@
        The back of the watch with programming lines still soldered on. I 3d printed a caseback to shield the components
        from my skin/sweat. If they directly touched my skin, it would be high enough voltage to shock me.
     </p>
-    <img loading="lazy" imgurId="4Mcgkhp"/>
+    <img loading="lazy" imgurId="4Mcgkhp" aspectRatio="908 / 1024"/>
     
     <p>
       Here's the first test flashing of the MCU with some test code, I added power to it, and it worked first try!
