--- a/src/app/projects/smartpaywatch/smart_pay_watch_page.html
+++ b/src/app/projects/smartpaywatch/smart_pay_watch_page.html
@@ -32,7 +32,7 @@
       unit w/LCD screen from the front of the watch face. The pcb is in front of that dividing material, and will sit
       behind a sheet of acrylic like the ones seen with lettering on the front of cheap casio digital watches.
     </p>
-    <img loading="lazy" imgurId="WboU1Qg"/>
+    <img loading="lazy" imgurId="WboU1Qg" aspectRatio="1024 / 806"/>
     <p>
       Pic of front of the watch. Not shown is the piece of acrylic that sits in front of the pcb. it's ~1mm thick and
       painted black on the back of it everywhere except the view port.
@@ -42,7 +42,7 @@
       Finally, the watch unit is inserted and the NFC chip fits in a small cavity next to the battery. It's wrapped
       in kapton tape to prevent shorting. <b>In this configuration, it does not work.</b>
     </p>
-    <img loading="lazy" imgurId="ZQ7151F"/>
+    <img loading="lazy" imgurId="ZQ7151F" aspectRatio="1015 / 1024"/>
 
     <p>
        I tried in vain to wrap the card in metallic tape to act as a shield. The goal was to reduce the parasitic
