--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -3,9 +3,9 @@
     <h1>About the QR Tattoo</h1>
   </mat-card-header>
   <div class="divider"></div>
-    
+
   <mat-card-content>
-    <img imgurId="r9Nmh7d">
+    <img imgurId="r9Nmh7d" aspectRatio="1024 / 989">
     <p>
       This is a tattoo of a QR code that links to qrtatt.ooo. I 'own' this domain, and have it
       pointed at a reserved landing page on my personal website - blakewilliams.org - which is
