--- a/src/app/travels/half_dome_2022/half_dome_hike_page.html
+++ b/src/app/travels/half_dome_2022/half_dome_hike_page.html
@@ -90,7 +90,7 @@
     Many hours of hiking back later I got to finally see Vernal Falls in the daylight. Very impressive! I totally
     understand why it was spraying so much mist at me in the dark. 
   </p>
-  <img loading="lazy" imgurId="vewAz1F" />
+  <img loading="lazy" imgurId="vewAz1F" aspectRatio="918 / 1024"/>
   <p>Look at the 3 people in the middle-ground on the right side of the photo for some perspective on scale!</p>
   <img loading="lazy" imgurId="iMam3dA" aspectRatio="9 / 16" />
   <p>
