Adding scrollspy to mountainboard page, fixing some links

--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -1,3 +1,4 @@
+<scroll-spy/>
 <mat-card>
   <mat-card-header>
     <h1>DIY Electric Mountainboard</h1>
@@ -21,7 +22,7 @@
     </p>
     <img loading="lazy" imgurId="u5ORhhv"/>
 
-    <p>
+    <p id="battery-pack">
       The first major hurdle was making the battery pack. Here I am spot welding Samsung 30Q 18650 batteries together
       into parallel groups, for use in a 12 series 6 parallel battery configuration.
     </p>
@@ -76,7 +77,7 @@
     </p>
     <img loading="lazy" imgurId="sIIbXUP"/>
     
-    <p>
+    <p id="v1-finished">
       The board is 'finished'!! Ready for first test ride!
     </p>
     <img loading="lazy" imgurId="DznzMo0"/>
@@ -103,7 +104,7 @@
     </p>
     <img loading="lazy" imgurId="nwvLNSc" aspectRatio="853 / 1024"/>
 
-    <p>
+    <p id="drive-chain-upgrade">
       I bought some 66 tooth sprockets and 25H roller chain. This is me drill pressing adapter holes along the spokes
       to adapt it to the wheel hubs I used.
     </p>
@@ -127,7 +128,7 @@
     </p>
     <img loading="lazy" imgurId="zOxCDDU"/>
 
-    <p>
+    <p id="HUD-upgrade">
       There's a popular open source 'dashboard' floating around the Internet called DaveGa, and it uses a 177 x 220px
       screen. I put in effort to rewriting it's display drivers to work with larger format touch screens and a more
       powerful microcontroller to drive the screens at a sufficient refresh rate.
@@ -140,6 +141,13 @@
       microcontroller, as well as a few tactile buttons to navigate the menus and adjust the configuration
     </p>
     <img loading="lazy" imgurId="EvxxF9m"/>
+
+    <p>
+      And after all this effort, it was finally done. Sometimes building things is more rewarding than actually using
+      them, but this was definitely an exception to that; It's one of my favorite things to use that I've made! It
+      handles very well at bmx tracks, only struggling at the tightest of the embanked turns.
+    </p>
+    <img loading="lazy" imgurId="MCgCxjL"/>
 
   </mat-card-content>
 </mat-card>
