--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -141,7 +141,7 @@
         LEDs; the only application I've seen them used in are for commercial airplane cockpit displays. Because
         these were used in avionics, they are ceramic case-bodies and the top layer is sapphire. I was able to
         write <a href="https://github.com/blakewilliams1/dot-matrix-watch-2" target="_blank">these display drivers</a> for it
-        based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
+        based on <a href="https://cdn.hackaday.io/files/254581089195072/hdsp-2000.pdf" target="_blank">these xerox scans</a>
         of old datasheets from the 1970's.
       </p>
       <img
