--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
@@ -39,6 +39,7 @@ p {
   overflow: hidden;
   position: absolute;
   text-overflow: ellipsis;
+  font-size: larger;
   top: 0%;
   white-space: nowrap;
   z-index: 2;
