small image sizing fixes

--- a/src/app/projects/neonsign/neon_sign_page.html
+++ b/src/app/projects/neonsign/neon_sign_page.html
@@ -13,7 +13,7 @@
       elements, and it mimics the effects of a glass tube of neon. I bought some of these strips and began converting
       the art to an equivalent design more fitted to this medium. I traced it into the neon sign template you see here:
     </p>
-    <img loading="lazy" imgurId="65ghScD"/>
+    <img loading="lazy" imgurId="65ghScD" aspectRatio="1038 / 767"/>
 
     <p>
       After getting the art onto paper and taped behind a sheet of polycarbonate, I started cutting sections of faux
