--- a/src/app/projects/nixiewatch/nixie_watch_page.html
+++ b/src/app/projects/nixiewatch/nixie_watch_page.html
@@ -31,7 +31,7 @@
       Here I am trying on the bare PCB after installing some custom lugs out of scrap metal and some cannibalized
       pogo pins to hold the strap's lugs in place.
     </p>
-    <img loading="lazy" imgurId="EFVuTdm"/>
+    <img loading="lazy" imgurId="EFVuTdm" aspectRatio="1436 / 1067"/>
 
     <p>
       This was my flashing setup. The In-Circuit Serial programmer output has jumper wires plugged into it, and the
