--- a/src/app/travels/shasta/shasta_page.html
+++ b/src/app/travels/shasta/shasta_page.html
@@ -96,7 +96,7 @@
   <img loading="lazy" imgurId="KIqnrxF" /><br>
   The conditions were great, the snow had softened, and I got down within 15 minutes back to Lake Helen. Lots of people
   sliding glissading down were filming, would be nice to get those videos somehow. 
-  <img loading="lazy" imgurId="mOg8RNN" style="margin-left: auto; margin-right: auto; display: block;"/><br>
+  <img loading="lazy" imgurId="mOg8RNN" aspectRatio="2268 / 2614"/><br>
   Back at camp I packed everything up, and headed down to car. Riding the rest of the way down wasn't quite as enjoyable,
   all the snow downhill from there was moderately
   <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch" target="_blank">sun-cupped</a> and you're riding over these craters
