--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -1,8 +1,9 @@
+<scroll-spy/>
 <mat-card>
   <mat-card-header>
     <h1>What it takes to make a fursuit</h1>
   </mat-card-header>
-    
+
   <mat-card-content>
   <h2>Forward</h2>
   <p>How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.</p>
@@ -52,12 +53,12 @@
     After almost 3 weeks of hand-sewing the mask for 2-5 hours a day, I finally finished the face and neck. This was
     the first time seeing it "properly" stretched over the base it was made for.
   </p>
-  <img loading="lazy" imgurId="Tk0UvMK" />
+  <img loading="lazy" imgurId="Tk0UvMK" aspectRatio="2268 / 2164" />
   <p>
     This is what it would look like "improperly" stretched over the base, but with the eyes, teeth, hair, and foam base
     ears in place to get an idea of how progress is going and the visual direction it's headed in.
   </p>
-  <img loading="lazy" imgurId="YwK2PPO" />
+  <img loading="lazy" imgurId="YwK2PPO" aspectRatio="2268 / 4023" />
   <p>
     Once the face is sewn together, baseball stitching in the ears is next. The inner ear is just black felt to give a
     sense of depth and the foam lobes are wrapped in more fur which is hot glued on. After the ears are in place, I added
@@ -65,7 +66,7 @@
     and plump; there wouldn't be any chance for loose fur to be wrinkled in these areas and it helped reduce visibility
     of seams. The entire fur mask is ready for permanent affixation to the base!
   </p>
-  <img loading="lazy" imgurId="fOZsJOm" />
+  <img loading="lazy" imgurId="fOZsJOm" aspectRatio="2304 / 2111" />
   <p>
     This was another novel thing I tried out in my build process: I wanted to REALLY be sure that the fur would never
     come unglued in a few critical points along the face; if they did, there would be no way to fix it once the fabric
@@ -74,7 +75,7 @@
     fur mask over the base, then pushed sewing needles through the holes and mask to create a loop of thread. I
     tied the thread off with a lot of slack in the loops like this:
   </p>
-  <img loading="lazy" imgurId="GYuAATG" />
+  <img loading="lazy" imgurId="GYuAATG" aspectRatio="2304 / 1915" />
   <p>
     I wanted not only to make permanent physical anchors holding these key spots in place, but also help dramatically
     speed up my working time while glueing the mask to the base. I opted for
@@ -99,7 +100,7 @@
     surprisingly loose and spread out; you can wiggle your finger through it from one side to the other but it worked
     really well and you'd never know.
   </p>
-  <img loading="lazy" imgurId="NMhhVIe" />
+  <img loading="lazy" imgurId="NMhhVIe" aspectRatio="2304 / 1915" />
 
   <div class="divider"></div>
   <div id="hands" class="section-header">
@@ -120,12 +121,12 @@
     polyfil could be stuffed in and then sewn shut again. This creates large plushy pads, aka beans.
   </p>
   <img loading="lazy" imgurId="8cWjPkV" />
-  <img loading="lazy" imgurId="XZkTuTd" />
+  <img loading="lazy" imgurId="XZkTuTd" aspectRatio="2268 / 2365" />
   <p>
-    Once top and bottom halves were finished, it was time to painstakingly sew them together (<b>very</b> hard to feed
+    Once the top and bottom halves were finished, it was time to painstakingly sew them together (<b>very</b> hard to feed
     the fabric in at webbing of fingers). then flip them inside out to see the finished result
   </p>
-  <img loading="lazy" imgurId="MvZFA1U" />
+  <img loading="lazy" imgurId="MvZFA1U"  aspectRatio="9 / 16" />
 
   <!-- TODO: Add a pic of finished handpaw here-->
 
@@ -136,13 +137,13 @@
   <p>
     Unless you're a tailor, the most straight-forward way to get super accurate pattern of your body is to make a duct
     tape dummy. There are tons of videos online showing how to do this and it's a several person job. You basically
-    wear a cheap and thin painter suit while others wrap you in 2 layers of duct tape then cut you out of it. 
+    wear a cheap and thin painter suit while others wrap you in 2 layers of duct tape then cut you out of it.
   </p>
   <p>
     I built up a skin-tight masking tape layer around the dummy that I can use to draw on without worrying that I'm
-    affecting the dummy itself (in case revisions need to be done). 
+    affecting the dummy itself (in case revisions need to be done).
   </p>
-  <img loading="lazy" imgurId="rObO3k5" />
+  <img loading="lazy" imgurId="rObO3k5" aspectRatio="2268 / 2740" />
   <p>
     Once I finished drawing my pattern onto the dummies masking tape shell, I cut it off and used the shapes as
     patterns for cutting the fur. There are tons of videos online explaining this process. For my first bodysuit I
@@ -187,7 +188,7 @@
   <p>
     Not pictured yet is the rubber tread I added to the underside of the feet. I didn't realize how insanely
     slippery the feet are on wet surfaces till I walked on one and nearly fell. It's no joke how slippery the feet were
-    on smooth wet floors. 
+    on smooth wet floors.
   </p>
 
   <div class="divider"></div>
@@ -201,9 +202,9 @@
     the fur is applied it becomes too stiff and doesn't wag correctly. This is what it looks
     like as the end result:
   </p>
-  <img loading="lazy" imgurId="RXGwWfb" />
+  <img loading="lazy" imgurId="RXGwWfb" aspectRatio="9 / 16" />
 
-  
+
   <div class="divider"></div>
   <div id="result" class="section-header">
     <h2>End Results</h2>
@@ -213,8 +214,8 @@
     I'm very happy with how it came out! For a first attempt at making a suit, I think it turned out <i>especially</i>
     well. Here are a few pics I had taken of me in it at FC and LVFC!
   </p>
-  
-  <img loading="lazy" imgurId="lHuqm7u" />
-  <img loading="lazy" imgurId="gJjDskN" />
+
+  <img loading="lazy" imgurId="lHuqm7u" aspectRatio="2334 / 3499" />
+  <img loading="lazy" imgurId="gJjDskN" aspectRatio="975 / 966" />
   </mat-card-content>
 </mat-card>
